RTI-368 - fixed anchor links in the wrong position

--- a/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
@@ -192,8 +192,10 @@ html {
         font-size: 1.3rem;
 
         &.before {
-            top: 0.4rem;
-            padding-right: 6px;
+            height: 100%;
+            width: 1.5rem;
+            display: flex;
+            align-items: center;
         }
     }
 }
